--- a/document.tex
+++ b/document.tex
@@ -46,7 +46,7 @@
 % \newacronym{sel}{SEL}{\hyperref[sec::SEL]{Sound Exposure Level}}
 % \newacronym{mpe}{МПУ}{Модовое Параболическое Уравнение}
 \newglossaryentry{dino}{name=DINO, description = (Distillation with No Labels)}
-\newacronym{ml}{ML}{Машинное обучение}
+\newacronym{ml}{ML}{Machine Learning}
 \newacronym{nn}{NN}{Neural Network}
 \newacronym{nlp}{NLP}{Natural Language Processing}
 \newacronym{mlm}{MLM}{Masked Language Modeling}
@@ -63,7 +63,6 @@
     \subfile{subfiles/annotation.tex}
     \newpage
     \setcounter{page}{4}
-    % \subfile{subfiles/abstract.tex}
     \tableofcontents
     \subfile{subfiles/introduction.tex}
     \newpage
