--- a/subfiles/annotation.tex
+++ b/subfiles/annotation.tex
@@ -2,8 +2,10 @@
 
 
 \begin{document}
+    \begin{abstract}
     \section*{Аннотация}
     \par Данная выпускная квалификационная работа посвящена исследованию методов обучения без учителя для извлечения признаковых представлений исходного кода с целью их дальнейшего использования в downstream-задачах машинного обучения. В современных условиях разработки программного обеспечения анализ и обработка исходного кода играют ключевую роль в таких задачах, как предсказание дефектов, автоматический рефакторинг, классификация кода и поиск уязвимостей. Однако эффективное представление кода в машиночитаемом формате остается сложной задачей, требующей применения современных методов искусственного интеллекта.
     \par Цель данной работы заключается в адаптации алгоритма самообучения \gls{dino} для работы с текстовыми данными, в частности с исходным кодом, и сравнительном анализе его эффективности с готовыми моделями представления кода. В рамках исследования был проведен анализ алгоритма, предложена его модификация для обработки текстовых последовательностей, обучены векторные представления исходного кода и выполнена их оценка на downstream-задачах, включая классификацию кода.
     \par Результаты работы демонстрируют потенциал методов обучения без учителя для автоматического извлечения информативных признаков из исходного кода. Разработанные подходы могут быть интегрированы в инструменты статического анализа, системы контроля качества кода и другие решения, направленные на повышение эффективности разработки программного обеспечения.
+    \end{abstract}
 \end{document}
