--- a/subfiles/part_1.tex
+++ b/subfiles/part_1.tex
@@ -4,13 +4,13 @@
 \begin{document}
     \section{Описание предметной области}
     \subsection{Машинное обучение}
-    \par \acrfull{ml} -- это раздел искусственного интеллекта, изучающий методы построения алгоритмов, способных автоматически обучаться и улучшать свою работу на основе данных без явного программирования. В отличие от традиционных алгоритмов, где поведение системы жестко задаётся разработчиком, модели машинного обучения выявляют закономерности в данных и используют их для прогнозирования, классификации или принятия решений
-    \par Результат обучения алгоритма называется моделью -- параметризованное отражение(функция), которое преобразует объекты из пространства входных признаков в пространство предсказаний. 
-    \par Одним из главных требований к модели -- ее способность к обобщению. Благодаря этому модель не просто запомнит данные на которых училась, а находит в них закономерности, что позволяет более точно делать отражение на новых объектах.
+    \par Машинное обучение (\acrlong{ml}, \acrshort{ml}) -- это раздел искусственного интеллекта, изучающий методы построения алгоритмов, способных автоматически обучаться и улучшать свою работу на основе данных без явного программирования. В отличие от традиционных алгоритмов, где поведение системы жестко задаётся разработчиком, модели машинного обучения выявляют закономерности в данных и используют их для прогнозирования, классификации или принятия решений
+    \par Результат обучения алгоритма называется моделью -- параметризованное отображение(функция), которое преобразует объекты из пространства входных признаков в пространство предсказаний.
+    \par В ходе обучения модель автоматически выявляет статистические закономерности между входными и выходными данными, анализируя множество примеров пар и оптимизируя функцию потерь. Такой подход не требует глубоких знаний предметной области или ручного конструирования признаков, поскольку модель самостоятельно выделяет релевантные паттерны непосредственно из данных. Благодаря архитектурным особенностям и регуляризации, обученная модель способна обобщать выявленные зависимости и применять их для предсказаний на новых данных.
     \par Алгоритмы \acrshort{ml} делятся на три основные категории:
     \begin{itemize}
         \item \nameref{sec:with_teacher}
-        \item \nameref{sec:with_teacher}
+        \item \nameref{sec:without_teacher}
         \item \nameref{sec:reinforcement_learning}
     \end{itemize} 
 
