--- a/subfiles/part_1/codebert.tex
+++ b/subfiles/part_1/codebert.tex
@@ -8,7 +8,7 @@
 
 \subsubsection{Маскированное языковое моделирование}
 \par \acrfull{mlm} -- это ключевая задача предобучения в современных языковых моделях, где модель учится предсказывать специально замаскированные токены в исходном тексте или коде на основе контекста. Этот подход позволяет нейросетям глубоко усваивать синтаксические и семантические зависимости в данных.
-
+% #TODO  Слабо способствует обучению понимания всего кода
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{MLM.png}
@@ -21,6 +21,7 @@
     \item Предсказание -- модель анализирует контекст вокруг маски и вычисляет вероятность токенов кандидатов.
     \item Функция потерь -- ошибка считается только для замаскированных позиций.
 \end{enumerate}
+% #TODO Основными приемуществами использованя млм являются
 \par Почему же используют \acrshort{mlm}
 \begin{itemize}
     \item Контекстное обучение -- модель учится находить взаимосвязи токенов, а не только статистику.
@@ -38,16 +39,18 @@
     \label{fig:rtd_bert}
 \end{figure}
 
-\par На рисунке \ref{fig:rtd_bert} изображен классический процесс обучения модели через задачу обнаружения заменённых токенов. Обучение происходит в 3 шага:
+\par На рисунке \ref{fig:rtd_bert} изображен классический процесс обучения модели на задаче обнаружения заменённых токенов. Обучение происходит в 3 шага:
 \begin{enumerate}
     \item Замена токенов -- маленькая модель генератора заменяет токены на новые, схожие по смыслу. К примеру running заменится на jogging 
     \item Предсказание -- модель анализирует контекст вокруг замены выявить является ли токен замененным.
     \item Функция потерь -- ошибка считается для замененных токенов и оригинальных.
 \end{enumerate}
+% #TODO Основными приемуществами РТД является 
 \par Почему же используют \acrshort{rtd}
 \begin{itemize}
-    \item Эффективность данных -- все токены используются в момент обучения.
-    \item Вычислительная сложность -- низкая у \acrshort{rtd} потому что используется бинарная классификация.
+    % #TODO СПСОБСТВУЕТ ЕЩЕ БОЛЬШЕМУ ПОНИМАНИЮ СТРУКТУРЫ ТЕКСТА
+    % #TODO \item Эффективность данных -- все токены используются в момент обучения.
+    % #TODO ПЕРЕДЕЛАЙ \item Вычислительная сложность -- низкая у \acrshort{rtd} потому что используется бинарная классификация.
 \end{itemize}
 
 \end{document}
