--- a/subfiles/part_1/deep_learning.tex
+++ b/subfiles/part_1/deep_learning.tex
@@ -2,18 +2,22 @@
 
 \begin{document}
 \subsection{Глубокое обучение}
+% #TODO Свое назавние получили из-за попытки их построения на основе структуры нейронной сети млекопетающих, так же как человеческий мозг состоит из количества нейронных слоев, каждый из которых активируется.
 \par Глубокое обучение -- это подраздел машинного обучения, основанный на использовании искусственных нейронных сетей (\acrshort{nn}). Эти модели способны автоматически извлекать признаки из данных, имитируя работу человеческого мозга в упрощённой форме.
-\par Свое название оно получило благодаря многослойной архитектуре нейронных сетей, что позволяет моделям находить более сложные закономерности. Например, в задаче классификации изображений первый слой находит базовые признаки, такие как края и прямые линии. Второй слой используя уже обработанные данные находит углы. Таким образом при достаточном количестве слоев нейронная сеть сможет отличать котов от собак. 
-\par К сожалению у нейронных сетей есть и недостатки:
+% #TODO ПЕРЕПИСАТЬ
+\par Свое название оно получило благодаря многослойной архитектуре нейронных сетей, что позволяет моделям находить более сложные закономерности. Например, в задаче классификации изображений начальные слои определяют базовые признаки, такие как перепады света, простые геометрические фигуры. Второй слой используя уже обработанные данные определяет типы объектов на изображении. Таким образом модель может построить цепь признаков, получаемых друг из друга которые помогают решить задачу с высокой точностью.
+\par К сожалению, у нейронных сетей есть и недостатки:
 \begin{itemize}
-    \item \textit{Сложность интерпретации} -- так как \acrshort{nn} работает как "черный ящик" (мы знаем вход и выходи модели, но не знаем что происходит внутри).
+    % #TODO ПЕРЕПИСАТЬ, признаки внутри ящика не интерпретируемы, объяснить почему именна такая - нельзя, гарантировать что предсказания модели будут адекватными для новых данных не возможно
+    \item \textit{Сложность интерпретации} -- \acrshort{nn} представлют собой "черный ящик". Тоесть работа нейронной сети описанна непонятными человеку терминами, так же человек не может повлиять на признаки которые извлекает модель.
+    % #TODO НАПИСАТЬ ПРО ПАМЯТЬ И ВЫЧИСЛИТЕЛЬНАЯ СЛОЖНОСТЬ очень большая, например куб от входных данных
     \item \textit{Вычислительная сложность} -- современные архитектуры могут иметь миллионы и миллиарды параметров, которые необходимо хранить в оперативной памяти.
 \end{itemize}
 \par В настоящее время глубокое обучение стало неотъемлемой частью нашей жизни. Благодаря ему работают голосовые помощники, системы рекомендаций и системы распознавания лиц.
 \par Основные направления в которых применяют глубокое обучение:
 \begin{itemize}
     \item \textit{Компьютерное зрение} -- Детекция объектов, классификация и генерация изображений.
-    \item \textit{Обработка естественного языка} -- Машинный перевод, языковое моделирование.
-    \item \textit{Обучение с подкреплением} -- Робототехника, Игровые AI.
+    \item \textit{Обработка естественного языка} -- Машинный перевод, языковое моделирование, LLM.
+    \item \textit{Обучение с подкреплением} -- Робототехника, Игровые AI, LLM.
 \end{itemize}
 \end{document}
