--- a/subfiles/part_1/reinforcement_learning.tex
+++ b/subfiles/part_1/reinforcement_learning.tex
@@ -6,19 +6,24 @@
     %  TODO переписать предложение
     \par Обучение с подкреплением --  это вид машинного обучения, при котором агент(модель) обучается на основе опыта взаимодействия со средой, принимая решения которые максимизируют награду.
     \par В отличие от прошлых методов, агенты ориентированы на последовательное принятие решений в условиях неопредленности.
+    
     \par Основное преимущество обучения с подкреплением:
     \begin{itemize}
-        \item \textit{Подходит для задач с отложенной наградой} -- Может учитывать долгосрочные последствия действий, а не только мгновенную выгоду.
-        \item \textit{Возможность обучения без размеченных данных} -- Не требует готовых "правильных ответов".
+        \item \textit{Подходит для задач с отложенной наградой} -- может учитывать долгосрочные последствия действий, а не только мгновенную выгоду.
+        \item \textit{Возможность обучения без размеченных данных} -- не требует готовых "правильных ответов".
+        % #TODO Не требуется диффиренцируемая фкнеция качества
     \end{itemize}
     \par Основные недостатки обучения с подкреплением:
     \begin{itemize}
-        \item \textit{Высокие вычислительные затраты} -- Требует миллионов (иногда миллиардов) попыток для обучения.
-        \item \textit{Проблема исследования-эксплуатации} -- Агент должен балансировать между исследованием и эксплуатацией. Исследование -- проба новых действий, для поиска лучшей стратегии. Эксплуатация -- использование уже известных лучших действий.
+        % #TODO Переписать например ждать ответ человека для оценки ллм
+        \item \textit{Высокие вычислительные затраты} -- такое обучение требует многочисленных операций взаимодействия со средой которые могут представлять собой трудновычислимые алгоритмы, например, игры.
+        % #TODO Для получения качественной модели алгоритм обучения должен позволять модели исследовать новые способы решения задачи, в то время как эксплоатировать уже изученные способы. Пытаться найти новое решение, при этом портить чтобы найти новые
+        \item \textit{Проблема исследования-эксплуатации} -- агент должен балансировать между исследованием и эксплуатацией. Исследование -- проба новых действий, для поиска лучшей стратегии. Эксплуатация -- использование уже известных лучших действий.
     \end{itemize}
-    \par Пример моделей которые обучаются с помощью обучения с учителем:
+    % #TODO Добавить литературу и моделей
+    \par Пример моделей которые обучаются с помощью обучения с подкреплением:
     \begin{itemize}
-        \item К средних
-        \item Генеративные состязательные сети
+        \item LLM
+        \item Алгоритм автоматического управления .транспортных средства
     \end{itemize}
 \end{document}
