--- a/subfiles/part_1/study_without_teacher.tex
+++ b/subfiles/part_1/study_without_teacher.tex
@@ -3,28 +3,38 @@
 \begin{document}
 \subsubsection{Обучение без учителя} 
     \label{sec:without_teacher}
-    % TODO переписать предложение
-    \par Обучение без учителя --  это вид машинного обучения, при котором модель обучается на примерах для которых нет какой-либо разметки. Цель такого метода обучения -- построение модели которая сама будет находить закономерности, не опираясь на внешние подсказки. 
+    % #TODO Зачастую в таких задачах не существует правильного ответа, а лишь известен метод оценки полученного результата
+    \par Обучение без учителя --  это вид машинного обучения, при котором модель обучается на примерах для которых известны только входные данные. Цель такого метода обучения -- построение модели которая сама будет находить закономерности, не опираясь на внешние подсказки. 
     \par Задачи обучения без учителя включают в себя:
     \begin{itemize}
+        % #TODO ПЕРЕПИСАТЬ, ВСМ ГРУППЫ МЕЖДУ СОБОЙ ПОХОЖИ
         \item \textit{Кластеризацию} -- задача разделения объектов на группы, которые имеют сходство между собой и отличаются от других.
+        % #TODO Уменьшение объема данных об объекте за счет выделения ключевой информации
         \item \textit{Снижение размерности} -- задача уменьшение количества признаков данных, сохраняя при этом информацию об объекте.
         \item \textit{Поиск ассоциативных правил} -- задача выявления устойчивых взаимосвязей между событиями в больших данных.
-        \item \textit{Генеративные модели} -- задача генерации новых данных похожих на тренировочные.
+        \item \textit{Генеративные модели} -- задача создания новых объектов на основе некоторых входных данных задающих параметры выходного объекта.
+        % #TODO ИЗВЛЕЧЕНИЕ ПРИЗНАКОВ
     \end{itemize}
-    \par Основное преимущество обучения без учителя:
+    \par Основные преимущества обучения без учителя:
     \begin{itemize}
-        \item \textit{Не требуется разметка данных} -- работа с неразмеченными данными значительно облегчает процесс сбора данных.
-        \item \textit{Гибкость и универсальность} -- применимо в разнообразных областях, а так же может использоваться для предобработки данных перед обучением с учителем
+        \item \textit{Не требуется разметка данных} -- работа с неразмеченными данными значительно облегчает процесс их сбора.
+        % #TODO Применимо к большему классу задач, по скольку для обучения требуется лишь мера качества предсказания, которая может быть основанна на чем угодно а не только на ответах
+        \item \textit{Гибкость и универсальность} -- применимо в разнообразных областях, а так же может использоваться для предобработки данных перед обучением с учителем.
     \end{itemize}
     \par Основные недостатки обучения без учителя:
     \begin{itemize}
-        \item \textit{Сложность оценки качества} -- отсутствие разметки затрудняет объективную оценку результатов.
-        \item \textit{Проблема интерпретируемости} -- так как пространство выходных значений не известно, сложно их интерпретировать. 
+        \item \textit{Сложность оценки качества} -- отсутствие разметки требует построеия не менее эффективной и объективной функции оценки качества предсказания.
+        % #TODO ПОФИКСИТЬ
+        \item \textit{Проблема интерпретируемости} -- во многих задачах обучения без учителя предсказываемые моделью значения сложно интерпретируемы человеку за счет того что оно опирается на некоторые функции а не ответ человека // из-за того что предсказание модели не похоже на нормальне ответы их интерпритация затрудняется. 
     \end{itemize}
-    \par Пример моделей которые обучаются с помощью обучения с учителем:
+    % #TODO К моделям обучаеммым данным методом можно отнести. Ссылка на литературу, добавить моделей
+    \par Пример моделей которые обучаются с помощью обучения без учителем:
     \begin{itemize}
-        \item К средних
+        \item KMeans
+        \item CLUSTERING SMTH
         \item Генеративные состязательные сети
+        \item LLM
+        \item Diffusion models
+        \item Feature extraction models
     \end{itemize}
 \end{document}
