--- a/subfiles/part_2/data.tex
+++ b/subfiles/part_2/data.tex
@@ -2,11 +2,15 @@
 
 \begin{document}
     \subsection{Описание данных}
+    % #TODO Первое исследование было решено провести на примерах кода на одном языке программирования, чтобы исключить из исследования возможные зависимости от разных языков.
     \par Для обучения модели было решено использовать код только на одном языке, таким образом уменьшится разнообразие в данных и модель сможет обучиться легче.
+    % #TODO В качестве языка для эксперементов был выбран С в виду его невероятной поплуярности и представленности в разработке кода, так же синтаксис многих современных языков был основан на синтаксисе языка С.
     \par Из-за распространенности было решено остановиться на языке программирования C, в связи с его популярностью и так как множество языков программирования C подобные.
-    \par Тренировочный набор данных был собран с помощью репозитория CodeforcesYoink. Он предоставляет инструмент для автоматизированного сбора примеров кода с платформы codeforces. С помощью этого инструмента можно извлекать код участников по определенным параметрам, таким как язык программирования или идентификатору задания.
-    \par Были собранны данные из 104 задач. Количество тренировочных данных: 36489
+    % #TODO Ссылка на работу саши
+    \par Тренировочный набор данных был собран с помощью репозитория CodeforcesYoink\cite{codeforcesyoink}. Он предоставляет инструмент для автоматизированного сбора примеров кода с платформы codeforces. С помощью этого инструмента можно извлекать код участников по определенным параметрам, таким как язык программирования или идентификатору задания.
+    \par Были собранны данные из 104 задач. Количество тренировочных данных: 36489 примеров кода.
     \par Для оценки результата работы использованы данные из Project CodeNet\cite{puri2021codenetlargescaleaicode} от IBM. Это масштабный датасет, содержащий более 14 миллионов образцов кода на 55 языках программирования. Датасет включает разнообразные задачи, метаданные(например статус выполнения, время работы кода, потребление памяти).
-    % TODO перефразировать
+    % #TODO перефразировать
+    % #TODO Из всего набора данных было отобранно 48 задач. Для каждой задачи были выбранны решения выполненные на языке программирования С и получившие положительный статус выполнения работы.
     \par Из этого набора данных было выбрано 48 задач, в которых было больше всего примеров кода на C и у которых статус выполнения принят.
 \end{document}
