--- a/subfiles/part_3/comparison.tex
+++ b/subfiles/part_3/comparison.tex
@@ -2,8 +2,10 @@
 \usepackage{multirow}
 \begin{document}
 \subsection{Сравнение моделей}
-\par Сравнение было решено провести с моделями CodeBert и UnixCoder, так как они считаются лучшими на данный момент.
+% #TODO ССЫЛКИ НА ВСЯКОЕ
+\par Сравнение было решено провести с моделями CodeBert\cite{} и UnixCoder\cite{}, так как они считаются лучшими на данный момент.
 \par Изначально весь выбраный датасет был пропущен через модели DinoNLP, CodeBert и UnixCoder, а полученные вектора сохранены в numpy файлы.
+% #TODO я буду решать задачу классификации, в качестве базы был выбран наивный баесовский, классификатор, рассказать как токенизировал.
 \par В качестве базового решения (baseline) был использован наивный баесовский классификатор(Naive Bayes Classifier). Наивный байесовский классификатор был выбран в качестве baseline-модели, поскольку он является классическим методом машинного обучения, широко применяемым для задач обработки текстовых данных.  
 \subsubsection{Классификация номера задания}
 \par Было выбрано 48 заданий из набора данных от IBM в которых больше всего принятых решений. Размер тренировочного набора - 65059. Размер тестового набора - 16265. После этого было решено использовать KNN классификатор и MLP классификатор предсказания номера задачи.
@@ -18,9 +20,10 @@
     \end{tabular}  
     \caption{Точность в процентах решения задачи определения номера задания}
 \end{table}
-\par Решение при помощи модели DinoNLP значительно выше чем baseline, не уступает решению модели использующей представления модели CodeBert и хуже, чем UnixCoder.
+\par Решение при помощи модели DinoNLP значительно выше чем baseline, не уступает решению модели использующей представления модели CodeBert но в тоже время хуже, чем значительно более сложная модель UnixCoder.
 \subsubsection{Классификация статуса задачи}
-\par Из прошлого набора данных было выбрано одно задание в котором было больше всего примеров. В качестве целевой переменной было выбрано булевое значение, равен ли задача принятой. 
+\par Из прошлого набора данных было выбрано одно задание в котором было больше всего примеров. % #TODO В качестве целевой переменной было выбрано булевое значение, равен ли задача принятой. 
+% #TODO Пример входных данных.
 \par Размер тренировочного набора - 7838, из них 44\% приняты. Размер тестового набора - 1960, из них 44\% приняты. 
 \begin{table}[H]
     \centering
@@ -31,5 +34,8 @@
     \end{tabular}    
     \caption{Точность в процентах решения задачи определения статуса решения}
 \end{table}
-\par Решение при помощи модели DinoNLP значительно выше чем baseline, в некоторых случаях уступает решению модели использующей представления модели CodeBert и хуже, чем UnixCoder.
+\par Решение при помощи модели DinoNLP значительно выше чем baseline, в некоторых случаях уступает решению модели использующей представления модели CodeBert но в тоже время хуже, чем значительно более сложная модель UnixCoder.
+% #TODO Задача списывания
+% #TODO Несколько кодов, скормить в дино, сделать снижение размерности в 3, нормализовать и расскарсть.
+% #TODO Снижение размера до 2х и показать группы
 \end{document}
