--- a/subfiles/part_3/training.tex
+++ b/subfiles/part_3/training.tex
@@ -2,7 +2,9 @@
 
 \begin{document}
 \subsection{Обучение модели}
+% #TODO  ТАФТАЛОГИЯ
 \par Следующим шагом работы было обучение моделей машинного обучения. 
+% #TODO АРХИТЕКТУРА список в каждом файле кто что делает
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.6\textwidth]{project_arc.png}
@@ -21,6 +23,7 @@
     \item epochs -- количество эпох обучения. Изначально равно 100.
     \item local\_crops\_number -- количество локальных участков на одно наблюдение. Изначально равно 8.
 \end{itemize}
-\par Для запуска был использован персональный компьютер с ОС Ubuntu, GPU Nvidia 3090 с 16гб видеопамяти, и 256 гигабайтами оперативной памяти. При этом, со всеми выставленными настройками было занято 14 из 16 гигабайт видеопамяти.
+% #TODO Версия убунты
+\par Для запуска был использован персональный компьютер с ОС Ubuntu, GPU Nvidia 3090 с 16гб видеопамяти, и 256 ГигаБайтами оперативной памяти. При этом, со всеми выставленными настройками было занято 14 из 16 ГигаБайт видеопамяти.
 \par Весь процесс обучения занял 25 часов. Результатом работы был файл checkpoint.pth, в котором находились веса модели учителя и ученика, а так же данные из конфигурации процесса обучения.
 \end{document}
