--- a/subfiles/introduction.tex
+++ b/subfiles/introduction.tex
@@ -3,22 +3,13 @@
 \begin{document}
     \section*{Введение}
     \par В современной разработке программного обеспечения исходный код является ключевым ресурсом, требующим эффективного анализа и обработки. С ростом сложности программных систем и увеличением объёмов кодовой базы традиционные методы анализа кода сталкиваются с рядом ограничений, связанных с масштабируемостью и точностью. В таких задачах, как автоматическое обнаружение уязвимостей, рефакторинг, поиск семантически схожих фрагментов кода и предсказание дефектов, критически важным становится наличие качественного признакового представления исходного кода, которое могло бы быть использовано в downstream-моделях машинного обучения.
-    \subsection*{Актуальность задачи}
     \par По мере роста объемов разработки ПО и старения кодовой базы корпоративных приложений, повышение продуктивности разработки и модернизация устаревших систем становятся критически важными задачами. Достижения в области глубокого обучения и машинного обучения уже привели к прорывам в компьютерном зрении, распознавании речи, обработке естественного языка и других областях, что вдохновило исследователей применять методы ИИ для повышения эффективности разработки программного обеспечения. Это способствовало стремительному развитию нового направления исследований - "ИИ для программирования". 
-    \subsection*{Цель работы}
-    \par Адаптация алгоритма \gls{dino} для извлечения признаковых представлений исходного кода и сравнительный анализ его эффективности с готовыми моделями (CodeBERT, UnixCoder) на downstream-задачах, таких как классификация кода.
-    \subsection*{Задачи исследования}
+    \par Таким образом целью является адаптация алгоритма \gls{dino} для извлечения признаковых представлений исходного кода и сравнительный анализ его эффективности с готовыми моделями (CodeBERT, UnixCoder) на downstream-задачах, таких как классификация кода.
+    \par Для достежения поставленной цели необходимо выполнить следующие задачи.
     \begin{enumerate}
         \item Провести обзор современных методов представления исходного кода и алгоритмов самообучения (self-supervised learning).
         \item Модифицировать алгоритм \gls{dino} для работы с текстовыми данными.
         \item Собрать и предобработать датасеты для обучения и оценки моделей.
         \item Обучить модель на основе адаптированного \gls{dino} и сравнить её с существующими решениями и проанализировать результаты.
-    \end{enumerate}
-    \subsection*{Структура работы}
-    \begin{enumerate}
-        \item Описание предметной области
-        \item Описание технических требований
-        \item Реализация обучения
-        \item Оценка работы 
     \end{enumerate}
 \end{document}
