--- a/subfiles/part_1/study_with_teacher.tex
+++ b/subfiles/part_1/study_with_teacher.tex
@@ -3,17 +3,21 @@
 \begin{document}
 \subsubsection{Обучение с учителем} % Обучение с учителем
     \label{sec:with_teacher}
-    \par Обучение с учителем -- это вид машинного обучения, при котором модель обучается на примерах, где для каждого входного объекта известен правильный ответ. Цель такого метода обучения -- построение модели которая будет способна предсказать ответ для ранее не встречавшихся примеров с заданной точностью.
-    \par Основное преимущество обучения с учителем:
+    \par Обучение с учителем -- это вид машинного обучения, при котором модель обучается на примерах, где для каждого входного объекта известен правильный ответ. Цель такого метода обучения -- построение модели, которая будет способна предсказать ответ для ранее не встречавшихся примеров с заданной точностью.
+    \par Основные преимущества обучения с учителем:
     \begin{itemize}
+        % #TODO зачастую задачи обучения с учителем имеют понятные человеку ответ, за счет того что получение множества ответов производется путем ручной(выполняемой человеком) разметки входных данных
         \item \textit{Интерпретируемость} -- модель работает с заранее определенным пространством выходных значений, так как разметка чаще составляется человеком.
         \item \textit{Интуитивная оценка качества} -- для оценки часто используется интуитивно понятные метрики такие как точность или средний квадрат ошибки. 
+        % #TODO Простота -- обучение с учителем является наиболее простопоставленной задачей, поскольку представляет собой апроксимацию таблично заданной функции.
     \end{itemize}
     \par Основные недостатки обучения с учителем:
     \begin{itemize}
+        % #TODO НУЖНА РАЗМЕТКА, НУЖЕН ДАТАСЕТ
         \item \textit{Зависимость от качества входных данных} -- эффективность модели напрямую определяется качеством размеченных данных, процесс создания которых требует значительных временных и трудозатрат. Для сложных задач объём требуемых данных может возрастать экспоненциально, что создаёт существенные практические ограничения.
         \item \textit{Проблема переобучения} -- существует риск избыточной подгонки модели под особенности обучающей выборки -- в таком случае алгоритм начинает воспроизводить не только значимые закономерности, но и случайные шумы, что резко снижает его способность к обобщению на новых данных.
     \end{itemize}
+    % #TODO К моделям обучаеммым данным методом можно отнести. Ссылка на литературу
     \par Пример моделей которые обучаются с помощью обучения с учителем:
     \begin{itemize}
         \item Линейная регрессия
