--- a/subfiles/part_2/main.tex
+++ b/subfiles/part_2/main.tex
@@ -5,11 +5,12 @@
     \par Для обучения было решено модернизировать алгоритм dino для работы с текстом.
     \par Для этого было необходимо сделать
     \begin{itemize}
-        \item Переработать модель из ViT в Transformer
+        \item Модифицировать репозиторий \acrshort{dino} для работы с оригинальной архитектурой трансформера
         \item Преобразовать multicrop augmentation
         \item Выбрать подходящие аугментации
     \end{itemize}
-    \subsubsection{Описание архитектуры самой маленькой нейронной сети из представленных}    
+    % #TODO Описать вит, привести пример токенизатора, позишн энкодинги, CLS токен, показать что я использую все, рассказать про self attention
+    \subsubsection{Описание архитектуры нейронной сети}
     \par Изначально архитектура разбивала исходное изображение на кусочки размером $16\times16$ пикселей, потом при помощи линейного преобразования преобразовывались в вектора embedding. Затем к ним прибавлялись Positional Embeddig и эти данные передавались дальше в блоки модели.
     \begin{figure}[H]
         \centering
@@ -39,23 +40,23 @@
     \subsubsection{Multcirop augmentation}
     \par В изначальной реализации участки выбирались случайным наложением границ на изображение. Для текста программ это не совсем подходит.
     \par Было предложено 3 основных способа как делать код на блоки:
+    % #TODO Предложенно 3 способа выполнения мультикроп аугментации на коде, три параграфа Разделение по токенам, + картинка и примеры, и тд.
     \begin{itemize}
         \item Блоки отделяются по токенам
         \item Блоки делятся по строкам кода - так как конец строки это конец выражения
         \item Блоки делятся по ветвям синтаксического дерева - таким образом участок кода будет оконченным с точки зрения логики
     \end{itemize}
-    \par Наилучшим из предложенных вариантов кажется разделение по ветвям синтаксического дерева, таким образом получится в качестве локальных участков брать завершенные логически блоки.
+    \par Наилучшим из предложенных вариантов является разделение по ветвям синтаксического дерева, таким образом получится в качестве локальных участков брать завершенные логически блоки. % #TODO Потому что такой подход позволяет скрывать завершенные логические блоки.
     \par В конечной реализации было решено использовать разделение блоков по токенам, таким образом получится больше уникальных блоков, что на небольшом датасете наборе данных, что значительно увеличит разнообразие в данных.
-    % TODO переформулировать который
-    \par После определения разделения, был реализован класс MulticropAugmentations, который на вход получает объект класса, который определяет как данные будут делиться на участки, и так же был реализован класс \_Separate\_by\_tokens, который во время вызова получает список количеств токенов, которые нужно выбрать случайным образом.
+    % #TODO переформулировать который
     \subsubsection{Аугментация данных}
-    \par Аугментация текстовых данных -- не тривиальный процесс. Существует несколько основных подходов.
+    % #TODO Аугментация текстовых данных является нетривиальной задачей, к которой есть несколько подходов.
+    \par Аугментация текстовых данных -- нетривиальный процесс. Существует несколько основных подходов.
     \begin{itemize}
         \item Синтаксические методы -- изменение структуры предложения с сохранением смысла. Основные способы: замена на синонимы, перестановка слов, добавление/удаление стоп слов.
         \item Семантические методы -- использование моделей для генерации новых вариантов текста. Основные способы: обратный перевод, генерация текста с помощью LLM, замена слов через предобученые \acrshort{mlm} модели.
         \item Методы основанные на шуме -- добавление шума для повышения устойчивости модели. Основные способы: случайные вставки/удаления слов, обмен местами соседних букв или слов, имитация ошибок клавиатуры.
     \end{itemize}
     \par В конкретном случае в связи с тем что данные являются кодом на языке C, то синтаксические методы не подойдут из-за невозможности определения поведения методов и функций. Семантические методы не подходят из-за специфики данных. А методы на основе шума не подходят из-за того что такие ошибки чаще всего отметаются спелчекермо из современных IDE.
-
     \par После определения необходимых аугментаций все остальные были удалены.
 \end{document}
