--- a/subfiles/part_2/requierments.tex
+++ b/subfiles/part_2/requierments.tex
@@ -4,20 +4,22 @@
 \subsection{Требования к аппаратному обеспечению}
 \par Для обучения нейронной сети требуется:
 \begin{enumerate}
-    \item Графический процессор (GPU) с высокой производительностью и тензорными ядрами. Рекомендуется использовать GPU от Nvidia не менее чем с 16 ГБ видеопамяти. Меньший объем памяти может существенно увеличить необходимое время для обучения модели.
+    \item Графический процессор (GPU) с высокой производительностью и тензорными ядрами. Рекомендуется использовать графический процессор Nvidia не менее чем с 16 ГБ видеопамяти. Меньший объем памяти может существенно увеличить необходимое время для обучения модели.
     \item Хранилище данных которое обеспечит высокую скорость доступа к файлам. Рекомендуется использовать SSD.
     \item Оперативная память для хранения датасета. Рекомендуется 16 ГБ.
 \end{enumerate}
+% #TODO Большая скорость обучения модели может быть достигнута за счет использования большего количества графических процессоров.
 \par Так же можно увеличить количество графических процессоров, так как код позволяет обучать модель на нескольких GPU одновременно.
 \subsection{Требование к программному обеспечению}
+% #TODO ССыЛКИ
 \par Для обучения нейронной сети требуется:
 \begin{enumerate}
-    \item Операционная система на базе Linux, в связи с тем что libuv не может работать на Windows.
-    \item Язык программирования python 3.11 или выше.
-    \item Библиотека глубокого обучения PyTorch
-    \item Библиотека машинного обучения Scikit Learn
-    \item Среда разработки: Pycharm, VSCode, Jupyter Notebook
-    \item Параллельная вычислительная платформа и программный интерфейс CUDA
+    \item Операционная система на базе Linux, или любая другая поддерживающая все используемые библиотеки.
+    \item Язык программирования Python 3.11 или выше.
+    \item Библиотека глубокого обучения PyTorch.
+    \item Библиотека машинного обучения Scikit Learn.
+    \item Среда разработки: PyCharm, VSCode, Jupyter Notebook.
+    \item Параллельная вычислительная платформа и программный интерфейс CUDA.
 \end{enumerate}
 \par Важно убедиться что программные средства совместимы между собой.
 \end{document}
